[tool.poetry]
name = "dstools"
version = "0.1.0"
description = ""
authors = ["Douglas Braga <douglasmartinsbraga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.24.2"
pandas = "^1.3.2"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
mypy = "^0.910"
jupyterlab = "^3.1.9"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
